# gazami

./: .gitignore  Cargo.toml  Makefile  build.rs  x86_64-unknown-gazami.json
.cargo/: config.toml
font_designs/: glyph_0.aseprite  glyph_1.aseprite  glyph_2.aseprite  glyph_3.aseprite  glyph_4.aseprite  glyph_5.aseprite  glyph_6.aseprite  glyph_7.aseprite  glyph_8.aseprite  glyph_9.aseprite  glyph_@.aseprite  glyph_A.aseprite  glyph_B.aseprite  glyph_C.aseprite  glyph_D.aseprite  glyph_E.aseprite  glyph_F.aseprite  glyph_G.aseprite  glyph_H.aseprite  glyph_I.aseprite  glyph_J.aseprite  glyph_K.aseprite  glyph_L.aseprite  glyph_M.aseprite  glyph_N.aseprite  glyph_O.aseprite  glyph_P.aseprite  glyph_Q.aseprite  glyph_R.aseprite  glyph_S.aseprite  glyph_T.aseprite  glyph_U.aseprite  glyph_V.aseprite  glyph_W.aseprite  glyph_X.aseprite  glyph_Y.aseprite  glyph_Z.aseprite  glyph_a.aseprite  glyph_ampersand.aseprite  glyph_asterisk.aseprite  (+54 more)
src/: frame_buffer.rs  main.rs
src/bmap/: mod.rs
src/font/: mod.rs
src/font_engine/font/: mod.rs
src/framebuffer/: mod.rs
src/video_framebuffer/: mod.rs
