[package]
name = "gazami"
version = "0.1.0"
edition = "2024"

[dependencies]
uefi-raw = { version = "0.11.0" }
uefi_handoff = { git = "https://github.com/FreeGazami/uefi_handoff.git", branch = "master" }

[build-dependencies]
serde = { version = "1.0.221", features = ["derive", "std"] }
serde_json = "1.0"
toml = "0.9.5"